# Python-MAGI

./: LICENSE  README.md  evaluation.py  generate_tab_fig.py  pyproject.toml  seir_log_missing_e.py  vignette.ipynb
data/: Lorenz_data.csv
src/python_magi/: __init__.py  magi.py
